Add request to save and login